[package]
name = "advent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = { version = "0.4.1", features = [] }
dirs = "5.0.1"
ascii = "1.1.0"
regex = "1.10.2"
once_cell = { version = "1.19.0", features = [] }
h2 = { version = "0.4.0", features = [] }
queues = "1.0.2"
